--- a/18-CLI/scraper/pubspec.yaml
+++ b/18-CLI/scraper/pubspec.yaml
@@ -5,6 +5,11 @@ version: 1.0.0
 
 environment:
   sdk: ^3.2.3
+  html: ^0.15.4
+  http: ^1.1.2
+  mysql_client: ^0.0.27
+  args: ^2.4.2
+  path: ^1.8.0
 
 # Add regular dependencies here.
 dependencies:
